# dns-server

./: CMakeLists.txt  README.md  config.ini
include/: cache.hpp  config.hpp  dns_packet.hpp  dns_record.hpp  logger.hpp  resolver.hpp  thread_pool.hpp  udp_server.hpp  zone_loader.hpp
src/: cache.cpp  config.cpp  dns_packet.cpp  dns_record.cpp  logger.cpp  main.cpp  resolver.cpp  thread_pool.cpp  udp_server.cpp  zone_loader.cpp
tests/: cache_test.cpp  config_test.cpp  dig_stress_test.sh  logger_test.cpp  perf_wrapper.cpp  shutdown_test.cpp  stress_test.cpp  test_queries.sh
zones/: example.zone
